--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@ pre.pygments .tok-il { color: #666666 } /* Literal.Number.Integer.Long */
 <li><a href="#_exercício_filtro_homomórfico">7.1. Exercício Filtro Homomórfico</a></li>
 </ul>
 </li>
-<li><a href="#_filtragem_no_domínio_da_frequência_2">8. Filtragem no domínio da frequência</a>
+<li><a href="#_quantização_vetorial_com_k_means">8. Quantização vetorial com k-means</a>
 <ul class="sectlevel2">
 <li><a href="#_exercício_kmeans">8.1. Exercício Kmeans</a></li>
 </ul>
@@ -1481,7 +1481,7 @@ Your browser does not support the video tag.
 </div>
 </div>
 <div class="sect1">
-<h2 id="_filtragem_no_domínio_da_frequência_2">8. Filtragem no domínio da frequência</h2>
+<h2 id="_quantização_vetorial_com_k_means">8. Quantização vetorial com k-means</h2>
 <div class="sectionbody">
 <div class="sect2">
 <h3 id="_exercício_kmeans">8.1. Exercício Kmeans</h3>
@@ -1609,7 +1609,7 @@ Your browser does not support the video tag.
 </div>
 <div id="footer">
 <div id="footer-text">
-Última atualização 2022-12-21 17:48:33 -0300
+Última atualização 2022-12-21 17:57:34 -0300
 </div>
 </div>
 <script type="text/x-mathjax-config">
